# gpt-oss

./: .gitignore  README.md  demo_completion.txt  demo_context.txt  demo_monitoring.py  pyproject.toml  test_monitoring_basic.py
.github/workflows/: ci-monitoring.yml
docs/: monitoring_design.md
gpt_oss/monitoring/: __init__.py  __main__.py  config.py  halluci_monitor.py  requirements-monitor.txt  run_web_app.py  web_app.py
gpt_oss/monitoring/demo/: README.md  __init__.py  demo.py
gpt_oss/monitoring/detectors/: __init__.py  jailbreak_heuristics.py  nli_faithfulness.py  numeric_sanity.py  retrieval_support.py  self_consistency.py
gpt_oss/monitoring/examples/: README.md  fever_mini.jsonl  truthfulqa_mini.jsonl
gpt_oss/monitoring/highlight/: __init__.py  html_report.py  span_align.py
gpt_oss/monitoring/metrics/: __init__.py  scoring.py
tests/monitoring/: test_monitor_basic.py  test_nli_faithfulness.py  test_numeric_sanity.py  test_self_consistency.py
