[project]
name = "gpt-oss"
description = "A collection of reference inference implementations for gpt-oss by OpenAI"

dependencies = [
  "openai-harmony",
  "tiktoken>=0.9.0",
  "aiohttp>=3.12.14",
  "chz>=0.3.0",
  "docker>=7.1.0",
  "fastapi>=0.116.1",
  "html2text>=2025.4.15",
  "lxml>=4.9.4",
  "pydantic>=2.11.7",
  "structlog>=25.4.0",
  "tenacity>=9.1.2",
  "uvicorn>=0.35.0",
  "requests>=2.31.0",
  "termcolor",
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.0.4"

[project.optional-dependencies]
triton = ["triton>=3.4", "safetensors>=0.5.3", "torch>=2.7.0"]
torch = ["safetensors>=0.5.3", "torch>=2.7.0"]
metal = ["numpy", "tqdm", "safetensors", "torch"]
test = ["pytest>=8.4.1", "httpx>=0.28.1"]
eval = ["pandas", "numpy", "openai", "jinja2", "tqdm", "blobfile"]
monitoring = ["numpy>=1.21.0", "scipy>=1.7.0", "regex>=2021.0.0", "tqdm>=4.62.0", "sentence-transformers>=2.2.0", "transformers>=4.20.0", "torch>=1.12.0", "jinja2>=3.0.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "gpt_oss_build_backend.backend"
backend-path = ["_build"]

[tool.setuptools.packages.find]
include = ["gpt_oss*"]

[project.scripts]
gpt-oss-monitor = "gpt_oss.monitoring.__main__:main"

[tool.scikit-build]
cmake.source-dir = "." # pick up the root CMakeLists.txt
cmake.args = [
  "-DGPTOSS_BUILD_PYTHON=ON",
  "-DCMAKE_BUILD_TYPE=Release",
  "-DBUILD_SHARED_LIBS=OFF",
]
[tool.scikit-build.wheel]
packages = ["gpt_oss"] # copy the whole Python package tree
